# eval-experiment

./: CLAUDE.md  pyproject.toml
src/evalkit/: cli.py  client.py  models.py
tests/: test_models.py
