[project]
name = "evalkit"
version = "0.1.0"
description = "experimenting with llm evals"
readme = "README.md"
authors = [
    { name = "addison-ch", email = "addisonchen.py@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "typer>=0.27.0",
]

[project.scripts]
evalkit = "evalkit.cli:main"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]

[tool.ruff]
line-length = 100

[tool.pyright]
typeCheckingMode = "strict"